--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,10 @@
   padding: 0;
 }
 
+header {
+  box-shadow: 1px 1px 5px 1px;
+}
+
 .header,
 .footer,
 .content {
@@ -20,6 +24,16 @@
 .header {
   padding: 15px;
   text-align: center;
+}
+
+.header h2 {
+  font-size: 29px;
+  color:darkslateblue;
+}
+
+.header .favicon {
+  width: 22px;
+  height: 22px;
 }
 
 .footer {
@@ -49,15 +63,19 @@
 .item {
   width: 90%;
   height: 100px;
-  background-color: gray;
+  background-color: rgb(227, 227, 227);
   background-size: cover;
-  border: 1px gray solid;
+  border: 1px rgb(229, 229, 229) solid;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
   border-radius: 5px;
-  box-shadow: 1px 1px 1px 1px;
+  box-shadow: 1px 1px 5px;
+}
+
+.item:hover {
+  background-color: rgb(208, 206, 206);
 }
 
 .item-image-cover {
@@ -68,6 +86,8 @@
 
 .score-board-cover {
   max-width: 637px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px;
 }
 
 .score-board {
@@ -77,30 +97,67 @@
   justify-content: space-between;
 }
 
+.score-board button {
+  background-color:thistle;
+  border: 1px gray solid;
+  border-radius: 5px;
+  padding: 3px;
+  font-size: 15px;
+  color: black;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
 .modal {
   position: absolute;
   left: 0;
   top: 0;
   right: 0;
   bottom: 0;
-  background-color: white;
+  background-color:rgba(26, 25, 25, 0.45);
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 999;
-  font-size: 4em;
+  font-size: 3em;
   font-weight: 700;
-  color:coral;
+  color:darkmagenta;
 }
 
-.modal p {
+.result-window {
+  border: 5px red ridge;
+  background-color: white;
+  width: 60%;
+  height: 40%;
+}
+
+.result-window p {
   text-align: center;
 }
 
-/* Helper classes */
+.result-window button {
+  background-color: azure;
+  color:darkcyan;
+  padding: 5px;
+  font-size: 17px;
+  border: 1px gray solid;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
-.bg-gray {
-  background-color: gray;
+.your-score {
+  font-size: 0,5em;
+  color:chocolate;
+  text-decoration: underline;
+}
+
+/* Helper classes */
+.bg-pink {
+  background-color: lightpink;
+}
+
+.bg-lightblue {
+  background-color:lightblue;
 }
 
 @media screen and (max-width: 556px) {
